--- a/web 2.0/Primeiro Projeto/formularios.html
+++ b/web 2.0/Primeiro Projeto/formularios.html
@@ -8,29 +8,56 @@
 
 <h2>Login</h2>
 
-<form>
-	
-	login: <br>
-	<input type="text" name="login">
-	<br>
-	Senha: <br>
-	<input type="password" name="senha">
-	<br>
-	<input type="submit" value="logar">
+	<form>
+		
+		login: <br>
+		<input type="text" name="login">
+		<br>
+		Senha: <br>
+		<input type="password" name="senha">
+		<br>
+		<input type="submit" value="logar">
 
+
+	</form>
+
+	<h2>Cadastre-se</h2>
+	<form>
+
+	Login:
+	<input type="text" name="login">
+	Sexo: <br>
+	<input type="radio" name="sexo" value="m"> masculino <br>
+	<input type="radio" name="sexo" value="f"> feminino <br>
+
+	interesses<br>
+	<input type="checkbox" name="interesses"> Futebol <br>
+	<input type="checkbox" name="interesses"> Cursos <br>
+	<input type="checkbox" name="interesses"> Moda <br>
+	<br>
+
+	Estado <br>
+
+	<select>
+		<option value="SP">SP</option>	
+		<option value="MA">MA</option>	
+		<option value="MG">MG</option>	
+		<option value="RJ">RJ</option>
+		<option value="RS">RS</option>	
+	</select>
+
+	<br>
+	<br>
+
+	Observações: <br>
+
+	<textarea></textarea>
+
+	<br>
+
+	<input type="submit" value="Cadastrar">
 
 </form>
 
-<h2>Cadastre-se</h2>
-Login:
-<input type="text" name="login">
-Sexo: <br>
-<input type="radio" name="sexo" value="m"> masculino <br>
-<input type="radio" name="sexo" value="f"> feminino <br>
-
-interesses<br>
-<input type="checkbox" name="interesses"> Futebol <br>
-<input type="checkbox" name="interesses"> Cursos <br>
-<input type="checkbox" name="interesses"> Moda <br>
 </body>
 </html>
